# android-studio-with-hunter

./: .gitignore  CMakeLists.txt  README.rst  hello-jni.cpp
android-studio/: build.gradle
android-studio/app/: build.gradle
android-studio/app/src/main/java/com/example/hellojni/: HelloJni.java
android-studio/app/src/main/res/layout/: activity_hello_jni.xml
android-studio/gradle/wrapper/: gradle-wrapper.properties
cmake/template/: toolchain.cmake.in
